--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -35,7 +35,6 @@
 
 #card {
   width: 500px;
-  height: 500px;
   padding: 20px 15px 15px 15px;
   display: flex;
   flex-direction: column;
@@ -66,12 +65,28 @@
 #card-body {
   width: 100%;
   height: 100%;
-  padding: 15px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
+}
+
+#card-body > button[type="submit"] {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px 0px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  transition: background-color 0.2s ease, color 0.2s ease;
+  cursor: pointer;
+}
+
+#card-body > button[type="submit"]:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
 }
 
 #upload-box {
   width: 100%;
-  height: 100%;
+  height: 350px;
   border: 3px dotted rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: flex;
